--- a/ComicBookApp/ComicBookApp.csproj
+++ b/ComicBookApp/ComicBookApp.csproj
@@ -103,6 +103,7 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Models\CharacterDataWrapper.cs" />
+    <Compile Include="Models\ComicDataWrapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
