--- a/ComicBookApp/ComicBookApp.csproj
+++ b/ComicBookApp/ComicBookApp.csproj
@@ -120,13 +120,13 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Properties\Default.rd.xml" />
-    <Content Include="Assets\LockScreenLogo.scale-200.png" />
-    <Content Include="Assets\SplashScreen.scale-200.png" />
-    <Content Include="Assets\Square150x150Logo.scale-200.png" />
-    <Content Include="Assets\Square44x44Logo.scale-200.png" />
-    <Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png" />
-    <Content Include="Assets\StoreLogo.png" />
-    <Content Include="Assets\Wide310x150Logo.scale-200.png" />
+    <Content Include="Models\Assets\LockScreenLogo.scale-200.png" />
+    <Content Include="Models\Assets\SplashScreen.scale-200.png" />
+    <Content Include="Models\Assets\Square150x150Logo.scale-200.png" />
+    <Content Include="Models\Assets\Square44x44Logo.scale-200.png" />
+    <Content Include="Models\Assets\Square44x44Logo.targetsize-24_altform-unplated.png" />
+    <Content Include="Models\Assets\StoreLogo.png" />
+    <Content Include="Models\Assets\Wide310x150Logo.scale-200.png" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
