--- a/ComicBookApp/ComicBookApp.csproj
+++ b/ComicBookApp/ComicBookApp.csproj
@@ -92,6 +92,7 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="ReadMe.txt" />
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
